--- a/src/main/resources/com/koteseni/ijaproj/view/game-view.fxml
+++ b/src/main/resources/com/koteseni/ijaproj/view/game-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-    prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1"
+    prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21"
     xmlns:fx="http://javafx.com/fxml/1"
     fx:controller="com.koteseni.ijaproj.controller.GameController">
     <center>
@@ -50,7 +50,7 @@
                     </cursor>
                 </Button>
                 <Region HBox.hgrow="ALWAYS" />
-                <Label fx:id="timer_label" text="Time" textAlignment="CENTER">
+                <Label fx:id="timer_label" text="Time&#xD;0s" textAlignment="CENTER">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
