--- a/src/main/resources/com/koteseni/ijaproj/view/replay-view.fxml
+++ b/src/main/resources/com/koteseni/ijaproj/view/replay-view.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-    prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21"
-    xmlns:fx="http://javafx.com/fxml/1"
+    prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@styles.css"
+    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
     fx:controller="com.koteseni.ijaproj.controller.ReplayController">
     <left>
         <VBox prefHeight="600.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Saved games" />
+                <Label text="Saved games" style="-fx-font-size: 18px;" />
                 <ListView fx:id="saved_games_list" prefHeight="464.0" prefWidth="180.0"
                     VBox.vgrow="ALWAYS" />
                 <Button fx:id="replay_selected_game_button" mnemonicParsing="false"
@@ -49,7 +49,7 @@
     <center>
         <VBox alignment="CENTER" prefHeight="600.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
-                <Label fx:id="save_name_label" text="" />
+                <Label fx:id="save_name_label" text="" style="-fx-font-size: 18px;" />
                 <GridPane fx:id="board_grid" alignment="CENTER" gridLinesVisible="true"
                     maxHeight="580.0" maxWidth="580.0" minHeight="100.0" minWidth="100.0"
                     prefHeight="400.0" prefWidth="400.0" VBox.vgrow="ALWAYS">
@@ -58,37 +58,28 @@
                     <children>
                         <Button fx:id="step_back_button" disable="true" mnemonicParsing="false"
                             onAction="#handleStepBackButton" prefHeight="42.0" prefWidth="88.0"
-                            text="&lt;">
+                            text="&lt;" style="-fx-font-size: 22px;">
                             <cursor>
                                 <Cursor fx:constant="HAND" />
                             </cursor>
-                            <font>
-                                <Font size="22.0" />
-                            </font>
                         </Button>
                         <Button fx:id="take_over_button" disable="true" mnemonicParsing="false"
                             onAction="#handleTakeOverButton" prefHeight="42.0" prefWidth="172.0"
-                            text="Take over">
+                            text="Take over" style="-fx-font-size: 22px;">
                             <cursor>
                                 <Cursor fx:constant="HAND" />
                             </cursor>
-                            <font>
-                                <Font size="22.0" />
-                            </font>
                         </Button>
                         <Button fx:id="step_forward_button" disable="true" mnemonicParsing="false"
                             onAction="#handleStepForwardButton" prefHeight="42.0" prefWidth="88.0"
-                            text="&gt;">
+                            text="&gt;" style="-fx-font-size: 22px;">
                             <cursor>
                                 <Cursor fx:constant="HAND" />
                             </cursor>
-                            <font>
-                                <Font size="22.0" />
-                            </font>
                         </Button>
                     </children>
                 </HBox>
-                <Label fx:id="move_counter_label" text="Move: 0" />
+                <Label fx:id="move_counter_label" text="Move: 0" style="-fx-font-size: 18px;" />
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
