--- a/src/main/resources/com/koteseni/ijaproj/view/game-view.fxml
+++ b/src/main/resources/com/koteseni/ijaproj/view/game-view.fxml
@@ -11,8 +11,8 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-    prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21"
-    xmlns:fx="http://javafx.com/fxml/1"
+    prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@styles.css"
+    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
     fx:controller="com.koteseni.ijaproj.controller.GameController">
     <center>
         <GridPane fx:id="board_grid" alignment="CENTER" gridLinesVisible="true"
@@ -25,10 +25,8 @@
     <bottom>
         <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <Label fx:id="move_counter_label" text="Moves" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <Label fx:id="move_counter_label" text="Moves" textAlignment="CENTER"
+                    style="-fx-font-size: 18px;">
                 </Label>
                 <Region HBox.hgrow="ALWAYS" />
                 <Button fx:id="hint_button" mnemonicParsing="false" onAction="#handleHintsButton"
@@ -50,10 +48,8 @@
                     </cursor>
                 </Button>
                 <Region HBox.hgrow="ALWAYS" />
-                <Label fx:id="timer_label" text="Time&#xD;0s" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <Label fx:id="timer_label" text="Time&#xD;0s" textAlignment="CENTER"
+                    style="-fx-font-size: 18px;">
                 </Label>
             </children>
             <padding>
