--- a/src/main/resources/com/koteseni/ijaproj/view/main-menu.fxml
+++ b/src/main/resources/com/koteseni/ijaproj/view/main-menu.fxml
@@ -11,61 +11,46 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-    prefHeight="600.0" prefWidth="800.0" styleClass="background"
+    prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@styles.css"
     xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
     fx:controller="com.koteseni.ijaproj.controller.MainMenuController">
     <center>
         <VBox alignment="CENTER" prefHeight="290.0" prefWidth="516.0" spacing="20.0"
             BorderPane.alignment="CENTER">
             <children>
-                <Label text="Koteseni" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold Italic" size="80.0" />
-                    </font>
-                </Label>
-                <ImageView fitHeight="39.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../images/koteseni_logo.png" />
+                        <Image url="@../images/game-title.png" />
                     </image>
+                    <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                    </VBox.margin>
                 </ImageView>
                 <Button fx:id="new_game_button" mnemonicParsing="false"
                     onAction="#handleNewGameButton" prefHeight="40.0" prefWidth="200.0"
-                    text="New Game">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
+                    text="New Game" style="-fx-font-size: 18px;">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
                 <Button fx:id="replay_game_button" mnemonicParsing="false"
                     onAction="#handleReplayGameButton" prefHeight="40.0" prefWidth="200.0"
-                    text="Replay Game">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
+                    text="Replay Game" style="-fx-font-size: 18px;">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
                 <Button fx:id="exit_button" mnemonicParsing="false" onAction="#handleExitButton"
-                    prefHeight="40.0" prefWidth="200.0" text="Exit">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
+                    prefHeight="40.0" prefWidth="200.0" text="Exit" style="-fx-font-size: 18px;">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-                <Label text="Lukáš Pšeja (xpsejal00)" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold" size="16.0" />
-                    </font>
+                <Label text="Lukas Pseja (xpsejal00)" textAlignment="CENTER"
+                    style="-fx-font-size: 18px; -fx-font-weight: bold;">
                 </Label>
-                <Label text="Václav Sovák (xsovakv00)" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold" size="16.0" />
-                    </font>
+                <Label text="Vaclav Sovak (xsovakv00)" textAlignment="CENTER"
+                    style="-fx-font-size: 18px; -fx-font-weight: bold;">
                 </Label>
             </children>
             <BorderPane.margin>
