--- a/src/main/resources/com/koteseni/ijaproj/view/styles.css
+++ b/src/main/resources/com/koteseni/ijaproj/view/styles.css
@@ -1,3 +1,6 @@
+/* Styles for the game */
+/* Authors: Lukas Pseja (xpsejal00), Vaclav Sovak (xsovakv00) */
+
 @font-face {
     -fx-font-family: 'Minecraft';
     font-family: 'Minecraft';
