--- a/src/main/resources/com/koteseni/ijaproj/view/main-menu.fxml
+++ b/src/main/resources/com/koteseni/ijaproj/view/main-menu.fxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Main menu FXML file -->
+<!-- Authors: Lukas Pseja (xpsejal00), Vaclav Sovak (xsovakv00) -->
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
